# webblinky

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.md  VERSION  build.ps1  flash.ps1  prj.conf  west.yml  win-env.ps1  win-install-host-tools.ps1  win-setup-environment.ps1  win-shell.ps1
boards/: esp32_devkitc_procpu.conf  esp32_devkitc_procpu.overlay  esp32_devkitc_wroom_procpu.conf  esp32_devkitc_wrover_procpu.conf  esp32_devkitc_wrover_procpu.overlay  esp32c3_devkitm.conf  esp32c3_devkitm.overlay  esp32c6_devkitc_esp32c6.conf  esp32c6_devkitc_esp32c6_hpcore.conf  esp32c6_devkitc_esp32c6_hpcore.overlay  esp32c6_devkitc_hpcore.conf  esp32c6_devkitc_hpcore.overlay  esp32s3_devkitc_esp32s3_procpu.conf  esp32s3_devkitc_esp32s3_procpu.overlay  qemu_x86_64.conf  rpi_pico2_rp2350a_m33_w.conf  rpi_pico2_rp2350a_m33_w.overlay  rpi_pico_rp2040_w.conf  rpi_pico_rp2040_w.overlay
manifest/: west.yml
manifest/zephyr/: patches.yml
scripts/windows/: build.ps1  clean.ps1  env.ps1  flash.ps1  install-host-tools.ps1  setup-env.ps1  shell.ps1
snippets/golioth/: golioth.conf  snippet.yml
snippets/golioth/boards/: esp32_devkitc_wroom_procpu.conf  esp32_devkitc_wrover_procpu.conf  rpi_pico_rp2040_w.conf
snippets/hawkbit/: hawkbit.conf  snippet.yml
snippets/mbedtls/: mbedtls.conf  snippet.yml
snippets/updatehub/: snippet.yml  updatehub.conf
snippets/updatehub/boards/: esp32_devkitc_wroom_procpu.conf
src/: main.c  make_self_signed_cert.sh
zephyr/patches/: 00_prico_w_ready_led.patch
